k8s/getway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: getway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: getway
  template:
    metadata:
      labels:
        app: getway
    spec:
      containers:
        - name: getway
          image: eline2016/getway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: getway-service
spec:
  selector:
    app: getway
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30000
